# beat_the_crowd

./: .pylintrc  LICENSE  Pipeline scratchpad.ipynb  Pyspark_Demo.ipynb  Readme.md  app.py  create_dataset.py  environment.yml  file.xlsx  output_exp.csv  pylintrc  pyproject.toml
.github/workflows/: build_tests.yml  connectivity.yml
.ipynb_checkpoints/: Pipeline scratchpad-checkpoint.ipynb
Analysis/clean_data/: denied_boarding.csv
Analysis/create_visualizations/: denied_boarding.py
SmoothFly/: .coverage  .coveragerc  app.py
SmoothFly/pipeline/: Pyspark_Demo.ipynb
SmoothFly/tests/: test_departure_input_data.py
SmoothFly/website_tests/: test_departure_input_data.py  test_sql_parsing.py
SmoothFly/website_utils/: departure_input_data.py  sql_parsing.py
analysis/tests/: denied_boarding_tests.py
clean_data/: denied_boarding.csv
docs/: Data 515 Presentation - SmoothFly.pptx  DesignDocuments.md
examples/: pipeline_example.ipynb  plotly_examples.ipynb  project_setup_example.md
raw_data/: Denied-Confirmed-Space-2021-Marketing-Carrier-Q1.csv  Denied-Confirmed-Space-2021-Marketing-Carrier.xlsx  DeniedBoardingOverall_1990_2021.csv  DeniedBoardingOverall_1990_2021.xlsx
scripts/: create_denied_boarding_dataset.py
src/: consumer_fare_visualizations.ipynb  create_visualizations_delay.py  create_visualizations_fares.py  delays_visulization.ipynb  denied_boarding_dataset.ipynb  denied_boarding_visualization.ipynb  example_visualization_denied_boarding.py
tests/: tests.py  viz_tests.py
website_utils/: departure_input_data.py  scratchpad.ipynb  sql_parsing.py
(+46 files in other folders)
